# SelfColoringUsingGAN

./: .gitignore  README.md
App/: README.md
App/static/: index.html
App/static/models/: README.md
DataProcessing/: CMakeLists.txt  GeneralDataSet.py  README.md  opencvTest.py
DataProcessing/include/: ImagePath.h  cl2.hpp  spline.h  utils.h
DataProcessing/source/: GenerateData.cpp  ImagePath.cpp  utils.cpp
DataProcessing/source/GenerateImg/: CMakeLists.txt  GenerateImg.cpp
